# dssl

./: CMakeLists.txt  README.md  readme.txt
app/: CMakeLists.txt
app/include/: application.h  coordinate_circle_mapper.h  graphics_circle_item.h  graphics_scene.h  helpers.h  main_window.h  stdafx.h  view.h
app/src/: application.cpp  coordinate_circle_mapper.cpp  graphics_circle_item.cpp  graphics_scene.cpp  helpers.cpp  main.cpp  main_window.cpp  view.cpp
calculation/: CMakeLists.txt
calculation/include/: abstract_compound_observable.h  assert_impl.h  circle_data.h  common_macro_helpers.h  iobservable.h  iobserver.h  object_placement_calculator.h  stdafx.h
calculation/src/: abstract_compound_observable.cpp  assert_impl.cpp  circle_data.cpp  object_placement_calculator.cpp
calculationtests/: CMakeLists.txt
calculationtests/include/: stdafx.h  test_object_placement_calculator.h
calculationtests/src/: main.cpp  test_object_placement_calculator.cpp
googletest/: .gitignore
googletest/googlemock/test/: gmock-matchers_test.cc
googletest/googletest/: CMakeLists.txt
googletest/googletest/include/gtest/: gtest-printers.h
googletest/googletest/include/gtest/internal/: gtest-port.h
googletest/googletest/test/: gtest-printers_test.cc
